Fix some elements not being aligned

--- a/resources/base.scss
+++ b/resources/base.scss
@@ -124,7 +124,7 @@ th {
     display: inline-block;
     margin-top: 1em;
     padding: 15px 25px;
-    background: $color_primary5;
+    background: $color_pageBg;
     border-radius: $widget_border_radius;
     border: 1px solid $color_primary25;
     box-shadow: $sidebox_shadow;
